[package]
name = "crabby"
authors = ["Ebalo"]
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/ebalo55/crabby"
repository = "https://github.com/ebalo55/crabby"
description = "Crabby is a tool developed to generate webshells written in - insert your desired webshell language -. It is designed to be used by red teams to aid in lateral movement, privilege escalation, and data exfiltration."

[profile.release]
strip = true
opt-level = 3

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking"] }
zip = "0.6.6"
rand = "0.8.5"
serde_json = "1.0.116"
log = { version = "0.4.21" }
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
regex = "1.10.4"
sha2 = { version = "0.10.8" }
base16ct = { version = "0.2.0" }