[package]
name = "crabby-webshell-generator"
authors = ["Ebalo"]
version = "1.1.2"
edition = "2021"
homepage = "https://github.com/ebalo55/crabby"
repository = "https://github.com/ebalo55/crabby"
description = "Crabby is a tool developed to generate webshells written in - insert your desired webshell language -. It is designed to be used by red teams to aid in lateral movement, privilege escalation, and data exfiltration."
keywords = ["webshell", "red-team", "cybersecurity", "lateral-movement", "data-exfiltration"]
license = "MIT"
readme = "README.md"
categories = ["web-programming", "development-tools"]

[profile.release]
strip = true
opt-level = "z"
incremental = true
codegen-units = 1
debug-assertions = false
lto = true

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
zip = "1.1.3"
rand = "0.8.5"
serde_json = "1.0.116"
log = { version = "0.4.21" }
fern = { version = "0.6.2", features = ["colored"] }
colored = "2.1.0"
humantime = "2.1.0"
regex = "1.10.4"
sha2 = { version = "0.10.8" }
base16ct = { version = "0.2.0" }
fancy-regex = "0.13.0"
glob = "0.3.1"
